git add Registroadmin.html

--- a/templates/Registroadmin.html
+++ b/templates/Registroadmin.html
@@ -191,7 +191,7 @@
         </div>
     </header>
 
-    <ul class="project-list">
+    <ul class="project-list" style="margin-left: 160px;">
         {% for registro in registros %}
         <li class="project-item">
             <div class="logo-row">
